manifests/si4-ml-digits-recognition/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: si4-ml-digits-recognition
  labels:
    toolkit.fluxcd.io/tenant: dev-team
