manifests/si4-ml-digits-recognition/base/si4-ml-digits-recognition-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/si4-ml-digits-recognition/base/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: si4-ml-digits-recognition
  name: si4-ml-digits-recognition
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: si4-ml-digits-recognition
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/si4-ml-digits-recognition/base/
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: si4-ml-digits-recognition
    spec:
      containers:
        - image: kerneltzo/ml-backend:latest
          name: si4-ml-digits-recognition
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
