manifests/si4-ml-digits-recognition/base/si4-ml-digits-recognition-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\appad\Kompose\kompose.exe convert --out manifests/si4-ml-digits-recognition/base/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: si4-ml-digits-recognition
  name: si4-ml-digits-recognition
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: si4-ml-digits-recognition
status:
  loadBalancer: {}
